# udm_standalone_appveyor_test

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: github-actions-demo.yml
external_libs/: CMakeLists.txt
src/: main.cpp
third_party_libs/: CMakeLists.txt
third_party_libs/lz4-cmake/: CMakeLists.txt
